wikipedia-reader/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wikipedia-reader-svc
spec:
  type: NodePort
  selector:
    app: wikipedia-reader
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
