wikipedia-reader/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wikipedia-reader-ingress
spec:
  rules:
    - host: wikipedia-reader.fbi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wikipedia-reader-svc
                port:
                  number: 80
